Fixed Layout Issues

--- a/css/global.css
+++ b/css/global.css
@@ -49,6 +49,7 @@
 	--gutter-width: 15%;
 	--gap: 80px;
 	--cont-width: 300px;
+	--cont-gap: 100px;
 }
 
 /* Dark theme colors */
