--- a/css/layout.css
+++ b/css/layout.css
@@ -68,17 +68,19 @@ body {
 }
 .cont-l,
 .cont-r {
-	max-width: 300px;
+	/* max-width: 300px; */
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
 }
 .cont-l {
-	margin-right: var(--cont-width);
+	/* margin-right: var(--cont-width); */
+	padding-right: var(--cont-gap);
 }
 .cont-r {
-	margin-left: var(--cont-width);
+	/* margin-left: var(--cont-width); */
+	padding-left: var(--cont-gap);
 }
 .img-cont-l {
 	width: 100%;
@@ -130,7 +132,9 @@ body {
 	line-height: 18px;
 	width: 100%;
 	text-align: center;
-	padding: 16px 70px;
+	/* padding: 16px 70px; */
+	padding-top: 16px;
+	padding-bottom: 16px;
 	margin-top: 16px;
 	border: 2px solid var(--primary-btn-bg);
 	background-color: var(--primary-btn-bg);
@@ -145,7 +149,9 @@ body {
 	line-height: 18px;
 	width: 100%;
 	text-align: center;
-	padding: 16px 70px;
+	/* padding: 16px 70px; */
+	padding-top: 16px;
+	padding-bottom: 16px;
 	margin-top: 16px;
 	border: 2px solid var(--secondary-btn-border);
 	background-color: transparent;
@@ -169,8 +175,8 @@ body {
 	.cont-l,
 	.cont-r {
 		max-width: none;
-		margin-left: 0;
-		margin-right: 0;
+		padding-left: 0;
+		padding-right: 0;
 	}
 	.main-row,
 	.sub-row {
